gobmkida/g1/store_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/store_persistent_reading_cache/src/engine/persistent.c:904:4: error: use of undeclared identifier 'byte_A07ABF'
|| byte_A07ABF[k] != 3 && v22[19] == 1 
   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/store_persistent_reading_cache/src/obj/1/persistent.o] Error 1
